Docker Files attached

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #No auth  protected 
 #endpoints.shutdown.sensitive=false
 
-spring.data.cassandra.keyspace-name=lendo
-spring.data.cassandra.contact-points=127.0.0.1
-spring.data.cassandra.port=9042
-spring.data.cassandra.local-datacenter=datacenter1
+#spring.data.cassandra.keyspace-name=lendo
+#spring.data.cassandra.contact-points=127.0.0.1
+#spring.data.cassandra.port=9042
+#spring.data.cassandra.local-datacenter=datacenter1
 
 #Enable shutdown endpoint
 #endpoints.shutdown.enabled=true
@@ -12,3 +12,13 @@ spring.data.cassandra.local-datacenter=datacenter1
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.jpa.show-sql=false
 #spring.jpa.hibernate.ddl-auto=create
+
+server.port=8085
+server.address=0.0.0.0
+spring.data.cassandra.local-datacenter=datacenter1
+spring.data.cassandra.keyspace-name=lendo
+spring.data.cassandra.contact-points=127.0.0.1
+spring.data.cassandra.port=9042
+spring.data.cassandra.username=cassandra
+spring.data.cassandra.password=cassandra
+spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
